--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation platform('com.google.firebase:firebase-bom:28.2.0')
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'org.jsoup:jsoup:1.11.3'
 }
 task deleteObjectJar(type: Delete){
     delete 'release/AndroidPlugin.jar'
