--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Bike2">
-        <activity android:name=".ShopInformationActivity"></activity>
+        <activity android:name=".EstimateActivity"></activity>
+        <activity android:name=".ShopInformationActivity" />
         <activity
             android:name=".ShopActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
